Bug 6471 - SHMLBA incorrect for sparc
Summary: SHMLBA incorrect for sparc
Status: RESOLVED FIXED
Alias: None
Product: glibc
Classification: Unclassified
Component: libc (show other bugs)
Version: 2.3.6
: P2 normal
Target Milestone: ---
Assignee: Jakub Jelinek
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-04-30 23:27 UTC by Martin Habets
Modified: 2014-07-03 11:34 UTC (History)
2 users (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:
fweimer: security-


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Habets 2008-04-30 23:27:45 UTC
In sysdeps/unix/sysv/linux/sparc/bits/shm.h
SHMLBA is defined as the pagesize. This is incorrect and does not match
include/asm-sparc/shmparam.h.
It causes the LTP tests for shmat01, shmt09 and mmap01 to fail.

Unfortunately the vac_cache_size used in the kernel is derived from the CPU
settings in openprom. The largest size we can encounter here is 256KB (for
ROSS HyperSparc CPUs), so I suggest to use that.

If I patch bits/shm.h with 256*1024 the shmat01 test above succeeds. The other
LTP tests need additional fixes.
Comment 1 Marek Polacek 2012-03-18 09:04:40 UTC
Should be fixed in git.